added the boardview
and included necessary changes in Game to allow view (actions not
applicable yet)

--- a/B16_Ex05/B16_Ex05.csproj
+++ b/B16_Ex05/B16_Ex05.csproj
@@ -39,6 +39,9 @@
     <Compile Include="Board.cs" />
     <Compile Include="BoardAnalyzer.cs" />
     <Compile Include="BoardView.cs" />
+    <Compile Include="Forms\BoardViewForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Forms\MainMenuForm.cs">
       <SubType>Form</SubType>
     </Compile>
