minor changes in form to allow access from board

--- a/B16_Ex05/B16_Ex05.csproj
+++ b/B16_Ex05/B16_Ex05.csproj
@@ -42,6 +42,12 @@
     <Compile Include="Forms\BoardViewForm.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Forms\GameEndedForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\GameEndedForm.Designer.cs">
+      <DependentUpon>GameEndedForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\MainMenuForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -57,8 +63,18 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Forms\GameEndedForm.resx">
+      <DependentUpon>GameEndedForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\MainMenuForm.resx">
+      <DependentUpon>MainMenuForm.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
